[gd_scene load_steps=2 format=3 uid="uid://cxanglgm3xlj"]

[ext_resource type="Script" path="res://ui/hub/guild_foundation_window.gd" id="1"]

[node name="GuildFoundationWindow" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(400, 300)
unresizable = true
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Fundar un Nuevo Clan"
horizontal_alignment = 1

[node name="FormContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ClanNameLabel" type="Label" parent="VBox/FormContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Nombre del Clan:"

[node name="ClanNameEdit" type="LineEdit" parent="VBox/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_placeholder_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
placeholder_text = "Ej: Guardianes de la Noche"

[node name="UrlLabel" type="Label" parent="VBox/FormContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Sitio Web (opcional):"

[node name="UrlEdit" type="LineEdit" parent="VBox/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_placeholder_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
placeholder_text = "https://tuclan.com"

[node name="DescriptionLabel" type="Label" parent="VBox/FormContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Descripci√≥n:"

[node name="DescriptionEdit" type="TextEdit" parent="VBox/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
placeholder_text = "Describe brevemente los objetivos y normas de tu clan..."
wrap_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="NextButton" type="Button" parent="VBox/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Siguiente"

[node name="CancelButton" type="Button" parent="VBox/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Cancelar"
